prepare structure for the new data

--- a/app/Resources/views/inc/footer.html.twig
+++ b/app/Resources/views/inc/footer.html.twig
@@ -43,30 +43,14 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-sm-6 col-lg-3">
-                <h3 class="footer-col-header">{{ 'footer.latest_tweets'|trans }}</h3>
-                <ul class="footer-col-tweets">
-                    <li class="footer-col-tweet clearfix">
-                        <svg class="twitter-icon pull-left" viewBox="0 0 18 18"><path d="M17.728,3.155c-0.634,0.281-1.314,0.471-2.03,0.557 c0.73-0.438,1.291-1.13,1.555-1.955c-0.684,0.404-1.439,0.699-2.245,0.857c-0.645-0.687-1.562-1.116-2.579-1.116 c-1.952,0-3.535,1.582-3.535,3.534c0,0.277,0.031,0.547,0.092,0.806C6.047,5.691,3.442,4.283,1.699,2.146 C1.395,2.666,1.221,3.273,1.221,3.922c0,1.227,0.624,2.309,1.572,2.941C2.214,6.846,1.668,6.687,1.191,6.422 c0,0.015,0,0.029,0,0.044c0,1.713,1.219,3.142,2.835,3.467c-0.296,0.08-0.608,0.124-0.931,0.124c-0.228,0-0.449-0.022-0.665-0.064 c0.45,1.404,1.755,2.427,3.302,2.455c-1.21,0.947-2.733,1.513-4.39,1.513c-0.285,0-0.566-0.017-0.844-0.049 c1.564,1.003,3.423,1.588,5.419,1.588c6.501,0,10.057-5.386,10.057-10.057c0-0.153-0.004-0.306-0.011-0.458 C16.654,4.486,17.254,3.864,17.728,3.155z"></path></svg>
-                        <p class="footer-col-tweet-content">
-                            Check out our new prestashop theme AVENA! If you look for smth stylish and super functional for your site click here
-                            <a href="#">bit.ly/HW1wPr</a>
-                            <a class="footer-col-tweet-time" href="#"><i>about 697 days ago</i></a>
-                        </p>
-                    </li>
-                    <li class="footer-col-tweet clearfix">
-                        <svg class="twitter-icon pull-left" viewBox="0 0 18 18"><path d="M17.728,3.155c-0.634,0.281-1.314,0.471-2.03,0.557 c0.73-0.438,1.291-1.13,1.555-1.955c-0.684,0.404-1.439,0.699-2.245,0.857c-0.645-0.687-1.562-1.116-2.579-1.116 c-1.952,0-3.535,1.582-3.535,3.534c0,0.277,0.031,0.547,0.092,0.806C6.047,5.691,3.442,4.283,1.699,2.146 C1.395,2.666,1.221,3.273,1.221,3.922c0,1.227,0.624,2.309,1.572,2.941C2.214,6.846,1.668,6.687,1.191,6.422 c0,0.015,0,0.029,0,0.044c0,1.713,1.219,3.142,2.835,3.467c-0.296,0.08-0.608,0.124-0.931,0.124c-0.228,0-0.449-0.022-0.665-0.064 c0.45,1.404,1.755,2.427,3.302,2.455c-1.21,0.947-2.733,1.513-4.39,1.513c-0.285,0-0.566-0.017-0.844-0.049 c1.564,1.003,3.423,1.588,5.419,1.588c6.501,0,10.057-5.386,10.057-10.057c0-0.153-0.004-0.306-0.011-0.458 C16.654,4.486,17.254,3.864,17.728,3.155z"></path></svg>
-                        <p class="footer-col-tweet-content">
-                            Check out our new prestashop theme AVENA! If you look for smth stylish and super functional for your site click here
-                            <a href="#">bit.ly/HW1wPr</a>
-                            <a class="footer-col-tweet-time" href="#"><i>about 697 days ago</i></a>
-                        </p>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-sm-6 col-lg-3">
-                <h3 class="footer-col-header">{{ 'footer.facebook'|trans }}</h3>
-            </div>
+            {#<div class="col-sm-6 col-lg-3">#}
+                {#<h3 class="footer-col-header">{{ 'footer.latest_tweets'|trans }}</h3>#}
+                {#<ul class="footer-col-tweets">#}
+                {#</ul>#}
+            {#</div>#}
+            {#<div class="col-sm-6 col-lg-3">#}
+                {#<h3 class="footer-col-header">{{ 'footer.facebook'|trans }}</h3>#}
+            {#</div>#}
         </div>
     </div>
     <div class="footer-bottom">
