--- a/app/Resources/views/inc/topbar.html.twig
+++ b/app/Resources/views/inc/topbar.html.twig
@@ -40,49 +40,49 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-xs-7 col-sm-4 col-md-4 col-lg-4">
-                <div class="topbar-additional topbar-currency topbar-dropdown pull-right">
-                    <span class="topbar-additional-selected">{{ 'currency.dollar'|trans }}</span>
-                    <div class="topbar-dropdown-content">
-                        <ul class="topbar-additional-list">
-                            <li class="topbar-additional-list-item">
-                                <a href="#">{{ 'currency.euro'|trans }}</a>
-                            </li>
-                            <li class="topbar-additional-list-item">
-                                <a href="#">{{ 'currency.pound'|trans }}</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="topbar-additional topbar-language topbar-dropdown pull-right">
-                    <span class="topbar-additional-selected">
-                        <img src="{{ asset('images/english.jpg') }}" alt="language" width="16" height="11"/>
-                        <span class="hidden-xs">{{ 'language.english'|trans }}</span>
-                    </span>
-                    <div class="topbar-dropdown-content">
-                        <ul class="topbar-additional-list">
-                            <li class="topbar-additional-list-item">
-                                <a href="#">
-                                    <img src="{{ asset('images/german.jpg') }}" alt="language" width="16" height="11"/>
-                                    {{ 'language.german'|trans }}
-                                </a>
-                            </li>
-                            <li class="topbar-additional-list-item">
-                                <a href="#">
-                                    <img src="{{ asset('images/spanish.jpg') }}" alt="language" width="16" height="11"/>
-                                    {{ 'language.spanish'|trans }}
-                                </a>
-                            </li>
-                            <li class="topbar-additional-list-item">
-                                <a href="#">
-                                    <img src="{{ asset('images/french.jpg') }}" alt="language" width="16" height="11"/>
-                                    {{ 'language.french'|trans }}
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+            {#<div class="col-xs-7 col-sm-4 col-md-4 col-lg-4">#}
+                {#<div class="topbar-additional topbar-currency topbar-dropdown pull-right">#}
+                    {#<span class="topbar-additional-selected">{{ 'currency.dollar'|trans }}</span>#}
+                    {#<div class="topbar-dropdown-content">#}
+                        {#<ul class="topbar-additional-list">#}
+                            {#<li class="topbar-additional-list-item">#}
+                                {#<a href="#">{{ 'currency.euro'|trans }}</a>#}
+                            {#</li>#}
+                            {#<li class="topbar-additional-list-item">#}
+                                {#<a href="#">{{ 'currency.pound'|trans }}</a>#}
+                            {#</li>#}
+                        {#</ul>#}
+                    {#</div>#}
+                {#</div>#}
+                {#<div class="topbar-additional topbar-language topbar-dropdown pull-right">#}
+                    {#<span class="topbar-additional-selected">#}
+                        {#<img src="{{ asset('images/english.jpg') }}" alt="language" width="16" height="11"/>#}
+                        {#<span class="hidden-xs">{{ 'language.english'|trans }}</span>#}
+                    {#</span>#}
+                    {#<div class="topbar-dropdown-content">#}
+                        {#<ul class="topbar-additional-list">#}
+                            {#<li class="topbar-additional-list-item">#}
+                                {#<a href="#">#}
+                                    {#<img src="{{ asset('images/german.jpg') }}" alt="language" width="16" height="11"/>#}
+                                    {#{{ 'language.german'|trans }}#}
+                                {#</a>#}
+                            {#</li>#}
+                            {#<li class="topbar-additional-list-item">#}
+                                {#<a href="#">#}
+                                    {#<img src="{{ asset('images/spanish.jpg') }}" alt="language" width="16" height="11"/>#}
+                                    {#{{ 'language.spanish'|trans }}#}
+                                {#</a>#}
+                            {#</li>#}
+                            {#<li class="topbar-additional-list-item">#}
+                                {#<a href="#">#}
+                                    {#<img src="{{ asset('images/french.jpg') }}" alt="language" width="16" height="11"/>#}
+                                    {#{{ 'language.french'|trans }}#}
+                                {#</a>#}
+                            {#</li>#}
+                        {#</ul>#}
+                    {#</div>#}
+                {#</div>#}
+            {#</div>#}
         </div>
     </div>
 </header>
