--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>{% block title %}{{ "ONGR Demo"|trans }}{% endblock %}</title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <link rel="icon" href="{{ asset('images/favicon32x32.ico')}}">
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/ongr.css') }}"/>
         {% endblock %}
