--- a/app/Resources/views/inc/minicart.html.twig
+++ b/app/Resources/views/inc/minicart.html.twig
@@ -15,18 +15,18 @@
             <div class="col-xs-8">
                 <a href="#" class="page-header-cart-close pull-right"><i class="glyphicon glyphicon-remove"></i></a>
                 <a href="#" class="page-header-cart-dropdown-amount">1 x Black Bag</a>
-                <span class="page-header-cart-dropdown-price">$100.00</span>
+                <span class="page-header-cart-dropdown-price">100,00 €</span>
             </div>
         </div>
         <div class="row page-header-cart-dropdown-additional">
             <div class="col-xs-6">
                 <div class="page-header-cart-dropdown-additional-block">
                     <span class="page-header-cart-dropdown-tax-title">{{ 'header.cart.tax'|trans }}</span>
-                    <span class="page-header-cart-dropdown-tax-amount">$0.00</span>
+                    <span class="page-header-cart-dropdown-tax-amount">0,00 €</span>
                 </div>
                 <div class="page-header-cart-dropdown-additional-block">
                     <span class="page-header-cart-dropdown-total-title">{{ 'header.cart.total'|trans }}</span>
-                    <span class="page-header-cart-dropdown-total-amount">$100.00</span>
+                    <span class="page-header-cart-dropdown-total-amount">100,00 €</span>
                 </div>
             </div>
             <div class="col-xs-6">
